<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:padding="25sp"
                android:text="@string/message"
                android:textColor="#7B4FC8"
                android:textSize="34sp"
                android:fontFamily="serif-monospace"/>
            <TextView
                android:id="@+id/welcome2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25sp"
                android:text="@string/message1"
                android:textColor="#7B4FC8"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/sub1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/sub1"
                android:textColorHint="@color/teal_200"
                android:textSize="25dp"
                android:textColor="@color/white"

                android:layout_margin="15dp"
                android:padding="20dp"
                />
            <EditText
                android:id="@+id/sub2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/sub2"
               android:textColorHint="@color/teal_200"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_margin="15dp"
                android:padding="20dp"
                />
            <EditText
                android:id="@+id/sub3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/sub3"
                android:textColorHint="@color/teal_200"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_margin="15dp"
                android:padding="20dp"
                />
            <EditText
                android:id="@+id/subj4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/sub4"
                android:textColorHint="@color/teal_200"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_margin="15dp"
                android:padding="20dp"
                />
            <EditText
                android:id="@+id/subj5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/sub5"
                android:textColorHint="@color/teal_200"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_margin="15dp"
                android:padding="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/output"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:fontFamily="serif-monospace"
                android:padding="20dp"
                />
            <Button
                android:id="@+id/btton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="15dp"
                android:textColor="@color/black"
                android:text="SUBMIT"
                android:textSize="25dp"/>
            </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>